# ClawBuddy

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  bootstrap.sh  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.yml  eslint.config.js  eslint.config.mjs  package.json  vitest.config.ts
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4ddf5e48d6aa_initial_schema.py
backend/skills/: amazon-search.skill  aws-cli.skill  docker.skill  ga4-metrics.skill
backend/src/clawbuddy/: __init__.py  app.py  config.py  constants.py  main.py  settings.py
backend/src/clawbuddy/capabilities/: skill_parser.py  types.py
backend/src/clawbuddy/channels/: types.py
backend/src/clawbuddy/db/: models.py  session.py
backend/src/clawbuddy/graph/: __init__.py  agent_graph.py  edges.py  state.py  sub_agent_graph.py  tools.py
backend/src/clawbuddy/lib/: agent_abort.py  build_info.py  errors.py  html_to_markdown.py  llm_resolver.py  pagination.py  qdrant.py  redis.py  responses.py  s3.py  sanitize.py  screenshot.py  sse.py  url_safety.py
backend/src/clawbuddy/middleware/: error_handler.py
backend/src/clawbuddy/providers/: __init__.py  embedding_factory.py  llm_factory.py
backend/src/clawbuddy/routers/: admin.py  browser.py  capabilities.py  channels.py  chat.py  cron.py  documents.py  files.py  folders.py  oauth.py  search.py  settings_router.py  setup.py  skills.py  stats.py  update.py  workspaces.py
backend/src/clawbuddy/schemas/: __init__.py  auth.py  capability.py  channel.py  chat.py  common.py  document.py  folder.py  settings_schema.py  workspace.py  workspace_export.py
backend/src/clawbuddy/services/: agent_debug.py  agent_state.py  browser.py  capability.py  channel.py  chat.py  chunking.py  config_validation.py  context_compression.py  cron.py  crypto.py  document.py  embedding.py  folder.py  image_builder.py  ingestion.py  mention_parser.py  model_discovery.py  permission.py  sandbox.py  (+12 more)
(+475 files in other folders)
