[project]
name = "clawbuddy"
version = "0.1.0"
description = "ClawBuddy API - Self-hosted AI agent platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.0",
    "python-multipart>=0.0.18",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Redis & background jobs
    "redis[hiredis]>=5.2.0",
    "arq>=0.26.1",
    # Object storage (S3/MinIO)
    "aioboto3>=13.0.0",
    # LangChain & LangGraph
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Docker
    "aiodocker>=0.23.0",
    # Telegram
    "aiogram>=3.15.0",
    # Browser automation
    "playwright>=1.49.0",
    # HTTP client
    "httpx>=0.28.0",
    # Crypto
    "cryptography>=44.0.0",
    # HTML to Markdown
    "markdownify>=0.14.0",
    # Utilities
    "orjson>=3.10.0",
    "loguru>=0.7.3",
    "croniter>=5.0.0",
    "cuid2>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawbuddy"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["clawbuddy"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
